# maps-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data/poi/: .gitkeep
helm/: Chart.yaml  values.yaml
helm/seed/: bestwestern-hotels.json
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  imagepullsecret.yaml  pvc.yaml  service.yaml
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  nominatim.yaml  secret.yaml  valhalla.yaml
k8s/overlays/local/: kustomization.yaml
k8s/overlays/production/: externalsecret.yaml  kustomization.yaml
k8s/overlays/teams/: externalsecret.yaml  kustomization.yaml
src/: __init__.py  server.py
src/config/: __init__.py  settings.py
src/infrastructure/: __init__.py  telemetry.py
src/services/: __init__.py  nominatim_client.py  poi_store.py  query_orchestrator.py  valhalla_client.py
src/sources/: __init__.py  csv_importer.py  overpass_client.py
src/tools/: __init__.py  geo.py
tests/: conftest.py  test_csv_importer.py  test_geo.py  test_nominatim_client.py  test_overpass_client.py  test_poi_store.py  test_query_orchestrator.py  test_valhalla_client.py
